add source code for example from article

--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,3 @@
-# Compiled Object files
-*.slo
-*.lo
-*.o
-
-# Compiled Dynamic libraries
-*.so
-
-# Compiled Static libraries
-*.lai
-*.la
-*.a
+*~
+Debug
+build
